# whatsapp-crm-bridge

./: .env.example  .gitignore  DEPLOY-GUIDE.md  Dockerfile  com.loca.obsidian-receiver.plist  docker-compose.yml  pyproject.toml
app/: auth.py  backup.py  config.py  main.py
app/analyzer/: claude_analyzer.py  daily_pipeline.py  prompts.py
app/autoreply/: knowledge.py  prompts.py  responder.py
app/feishu_bot/: agent.py  router.py
app/llm/: gemini.py
app/matcher/: customer_matcher.py
app/notifier/: daily_reminder.py  weekly_ceo_report.py
app/routers/: ai_manager.py  dashboard.py  triggers.py
app/static/: ai-manager.html  audit.html  customer-detail.html  dashboard.html
app/store/: audit.py  conversations.py  database.py  messages.py  retry_queue.py
app/sync/: feishu_to_hubspot.py
app/utils/: phone.py  tasks.py
app/webhook/: media.py  outbound_sync.py  router.py  sender.py  signature.py
app/writers/: feishu_uploader.py  feishu_writer.py  hubspot_writer.py  notion_customer_writer.py  notion_writer.py  (+2 more)
data/: crm_customers.json  knowledge_base.md  reply_style.md
local-receiver/: config.py  receiver.py  requirements.txt  setup.sh
nginx/: whatsapp.conf
scripts/: backfill_customer_stages.py  backfill_outbound.py  clean_chat_log_comments.py  dedup_contacts.py  deploy.sh  dormant_customers.py  fix_ranjit_match.py  merge_ceo_reports.py  merge_followups.py  migrate_chat_logs.py  migrate_normalize_phones.py  push_unmatched.py  setup_hubspot_properties.py  sync_customers.py  sync_notion_profiles.py  tier_customers.py  translate_followups.py
