[project]
name = "whatsapp-crm-bridge"
version = "0.1.0"
description = "WhatsApp Business API → Claude Analysis → Feishu CRM Bridge"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
    "pydantic-settings>=2.5.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",  # for TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
